@@ -1,5 +1,5 @@
 /* Test program for returning the canonical absolute name of a given file.
-   Copyright (C) 1996, 1997, 2000, 2002, 2004 Free Software Foundation, Inc.
+   Copyright (C) 1996,1997,2000,2002,2004,2005 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
    Contributed by David Mosberger <davidm@azstarnet.com>.
 
@@ -89,7 +89,10 @@ struct {
   {"SYMLINK_5",				0, "./doesNotExist", ENOENT},
   {"SYMLINK_5/foobar",			0, "./doesNotExist", ENOENT},
   {"doesExist/../../stdlib/doesExist",	"./doesExist"},
-  {"doesExist/.././../stdlib/.",	"."}
+  {"doesExist/.././../stdlib/.",	"."},
+  /* 30 */
+  {"./doesExist/someFile/",		0, "./doesExist/someFile", ENOTDIR},
+  {"./doesExist/someFile/..",		0, "./doesExist/someFile", ENOTDIR},
 };
 
 
@@ -118,7 +121,7 @@ int
 do_test (int argc, char ** argv)
 {
   char * result;
-  int fd, i, errors = 0;
+  int i, errors = 0;
   char buf[PATH_MAX];
 
   getcwd (cwd, sizeof(buf));
@@ -154,7 +157,9 @@ do_test (int argc, char ** argv)
   for (i = 0; i < (int) (sizeof (symlinks) / sizeof (symlinks[0])); ++i)
     symlink (symlinks[i].value, symlinks[i].name);
 
-  fd = open("doesExist", O_CREAT | O_EXCL, 0777);
+  int has_dir = mkdir ("doesExist", 0777) == 0;
+
+  int fd = has_dir ? creat ("doesExist/someFile", 0777) : -1;
 
   for (i = 0; i < (int) (sizeof (tests) / sizeof (tests[0])); ++i)
     {
@@ -208,7 +213,10 @@ do_test (int argc, char ** argv)
     }
 
   if (fd >= 0)
-    unlink("doesExist");
+    unlink ("doesExist/someFile");
+
+  if (has_dir)
+    rmdir ("doesExist");
 
   for (i = 0; i < (int) (sizeof (symlinks) / sizeof (symlinks[0])); ++i)
     unlink (symlinks[i].name);
